--- a/css/main.css
+++ b/css/main.css
@@ -4494,3 +4494,10 @@ body.mobile-nav-active #mobile-nav-toggle {
 .footer-text a, .footer-text i {
   color: #f8b600;
 }
+
+@media (max-width: 787px) {
+  .nav-tabs {
+    display: flex;
+    flex-direction: column;
+  }
+}
