--- a/css/main.css
+++ b/css/main.css
@@ -4501,3 +4501,8 @@ body.mobile-nav-active #mobile-nav-toggle {
     flex-direction: column;
   }
 }
+@media (min-width : 1080px){
+  #myTab{
+    margin-top: 100px;
+  }
+}
